books/python-functional-programming/src/examples/functional/fh_index.out
Traceback (most recent call last):
  File ".../fh_index.py", line 5, in <module>
    print(fh[2])
          ~~^^^
TypeError: '_io.TextIOWrapper' object is not subscriptable
