books/python-functional-programming/src/examples/functional/fh_index.py
import sys
file = sys.argv[0]

with open(file) as fh:
    print(fh[2])

